Extract Campaign, Creative, and Pixel stats from the Oath API and save them to AdSet, Keyword and SearchTerm Summary tables in the database.

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/SearchTerms.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/SearchTerms.cshtml
@@ -12,7 +12,7 @@
     {
         <tr>
             <td>@term.Id</td>
-            <td>@term.Query</td>
+            <td>@term.Name</td>
             <td>@(term.Keyword != null ? term.Keyword.Name + " (" + term.KeywordId + ")" : "")</td>
         </tr>
     }
