--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/IndexGauge.cshtml
@@ -30,9 +30,9 @@
             <td style="text-align:right">@sa.SearchAccountId</td>
             <td>@sa.Name</td>
             <td>@sa.Channel</td>
-            <td style="text-align:center">@sa.MinDaySum.ToString("d", CultureInfo.InvariantCulture) - @sa.MaxDaySum.ToString("d", CultureInfo.InvariantCulture)</td>
-            <td style="text-align:center">@sa.MinConvSum.ToString("d", CultureInfo.InvariantCulture) - @sa.MaxConvSum.ToString("d", CultureInfo.InvariantCulture)</td>
-            <td style="text-align:center">@sa.MinCallSum.ToString("d", CultureInfo.InvariantCulture) - @sa.MaxCallSum.ToString("d", CultureInfo.InvariantCulture)</td>
+            <td style="text-align:center">@sa.MinDaySum.ToShortDateString() - @sa.MaxDaySum.ToShortDateString()</td>
+            <td style="text-align:center">@sa.MinConvSum.ToShortDateString() - @sa.MaxConvSum.ToShortDateString()</td>
+            <td style="text-align:center">@sa.MinCallSum.ToShortDateString() - @sa.MaxCallSum.ToShortDateString()</td>
             <td style="text-align:center">@Html.ActionLink("view", "IndexGauge", "SearchCampaigns", new { saId = @sa.SearchAccountId }, null)</td>
         </tr>
     }
