Fix the stats gauge view for keywords and search terms

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
@@ -101,10 +101,10 @@
                     <td style="text-align:right">@gauge.Action.LatestDisp</td>
                     <td style="text-align:right">@gauge.Creative.EarliestDisp</td>
                     <td style="text-align:right">@gauge.Creative.LatestDisp</td>
-                    <td style="text-align:right">@pGauge.Keyword.EarliestDisp</td>
-                    <td style="text-align:right">@pGauge.Keyword.LatestDisp</td>
-                    <td style="text-align:right">@pGauge.SearchTerm.EarliestDisp</td>
-                    <td style="text-align:right">@pGauge.SearchTerm.LatestDisp</td>
+                    <td style="text-align:right">@gauge.Keyword.EarliestDisp</td>
+                    <td style="text-align:right">@gauge.Keyword.LatestDisp</td>
+                    <td style="text-align:right">@gauge.SearchTerm.EarliestDisp</td>
+                    <td style="text-align:right">@gauge.SearchTerm.LatestDisp</td>
                     @if (Model.Extended)
                     {
                         <td style="text-align:right">@gauge.Site.EarliestDisp</td>
