--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Advertisers/IndexFees.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Advertisers/IndexFees.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<Advertiser>
-@using System.Globalization
 @using DirectAgents.Domain.Entities.CPProg;
 @{
     DateTime currMonth = ViewBag.CurrMonth;
@@ -29,7 +28,7 @@
 </tr>
 @foreach (var adv in Model)
 {
-    var endedString = (adv.EndDate.HasValue ? " [End: " + adv.EndDate.Value.ToString("d", CultureInfo.InvariantCulture) + "]" : "");
+    var endedString = (adv.EndDate.HasValue ? " [End: " + adv.EndDate.Value.ToShortDateString() + "]" : "");
     <tr><td colspan="5"><b>@adv.Name</b>@endedString</td></tr>
     foreach (var camp in adv.Campaigns.OrderBy(x => x.Name))
     {
@@ -66,9 +65,9 @@
 @if (super)
 {
     <br />
-    @Html.ActionLink("Copy Budgets,Percents&Exceptions from last month", "CopyInfos", new { month = currMonth.ToString("d", CultureInfo.InvariantCulture), activeLastMonth = activeLastMonth })
+    @Html.ActionLink("Copy Budgets,Percents&Exceptions from last month", "CopyInfos", new { month = currMonth.ToShortDateString(), activeLastMonth = activeLastMonth })
     <text> - for campaigns with activity</text>
     <br /><br />
-    @Html.ActionLink("Create BaseFee items for the month", "CreateBaseFees", new { month = currMonth.ToString("d", CultureInfo.InvariantCulture) })
+    @Html.ActionLink("Create BaseFee items for the month", "CreateBaseFees", new { month = currMonth.ToShortDateString() })
     <text> - for advertisers that haven't ended</text>
 }
