--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtraItems/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtraItems/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Globalization
-@model DirectAgents.Web.Areas.ProgAdmin.Models.ExtraItemsVM
+﻿@model DirectAgents.Web.Areas.ProgAdmin.Models.ExtraItemsVM
 @{
     string campId = (string)Session["campId"];
 }
@@ -45,7 +44,7 @@
 {
 <tr>
     <td>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
-    <td>@item.Date.ToString("d", CultureInfo.InvariantCulture)</td>
+    <td>@item.Date.ToShortDateString()</td>
     <td>@item.Campaign.Name</td>
     <td>@item.Platform.Name</td>
     <td>@item.Description</td>
@@ -58,7 +57,7 @@
 <br />
 @if (!string.IsNullOrWhiteSpace(campId))
 {
-    @Html.ActionLink("New Extra Item", "CreateNew", new { campId = campId, date = (Model.Month.HasValue ? Model.Month.Value.ToString("d", CultureInfo.InvariantCulture) : "") })
+    @Html.ActionLink("New Extra Item", "CreateNew", new { campId = campId, date = (Model.Month.HasValue ? Model.Month.Value.ToShortDateString() : "") })
     <text>&nbsp;|&nbsp;</text>
     @Html.ActionLink("Back to Campaign", "Show", "Campaigns", new { id = campId }, null)
     <br />
