--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/Old/GenerateSpreadsheet.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/Old/GenerateSpreadsheet.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Globalization
-@model ClientPortal.Data.Contexts.SearchProfile
+﻿@model ClientPortal.Data.Contexts.SearchProfile
 @{
     var endDate = Model.GetLast_WeekEndDate();
     string filename = Model.SearchProfileName.Replace(" ", "") + "_" + DateTime.Today.ToString("yyyyMMdd") + ".xlsx";
@@ -22,7 +21,7 @@ Start Day of Week: @((DayOfWeek)Model.StartDayOfWeek)<br />
             <table>
                 <tr>
                     <td>@Html.Label("", "Stats End-Date:")</td>
-                    <td><input id="spreadsheet_enddate" type="text" name="enddate" value="@endDate.ToString("d", CultureInfo.InvariantCulture)" onfocus="EnableSubmitGenSpreadsheet()" /></td>
+                    <td><input id="spreadsheet_enddate" type="text" name="enddate" value="@endDate.ToShortDateString()" onfocus="EnableSubmitGenSpreadsheet()" /></td>
                 </tr>
                 <tr>
                     <td>@Html.Label("", "Weeks to include:")</td>
