--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Globalization
-@model DirectAgents.Domain.Entities.AB.ABClient
+﻿@model DirectAgents.Domain.Entities.AB.ABClient
 
 <h2>ClientPayments</h2>
 
@@ -18,7 +17,7 @@ Client: @Model.Name
 {
     <tr>
         <td>@Html.ActionLink("edit", "Edit", new { id = payment.Id })</td>
-        <td>@payment.Date.ToString("d", CultureInfo.InvariantCulture)</td>
+        <td>@payment.Date.ToShortDateString()</td>
         <td style="text-align:right">@payment.TotalValue()</td>
         <td style="text-align:right">@payment.NonJobValue()</td>
         <td style="text-align:right">@payment.JobValue()</td>
