--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Globalization
-@model IEnumerable<DirectAgents.Domain.Entities.CPProg.Campaign>
+﻿@model IEnumerable<DirectAgents.Domain.Entities.CPProg.Campaign>
 @{
     var today = DateTime.Today;
     var startOfMonth = new DateTime(today.Year, today.Month, 1);
@@ -46,8 +45,8 @@
             @Html.ActionLink("[Delete Campaign]", "Delete", new { id = camp.Id }, new { onclick = "if (!confirm('Are you sure?')) return false" })
         }
     </td>
-    <td>@(earliestBudgetInfo != null ? earliestBudgetInfo.Date.ToString("d", CultureInfo.InvariantCulture) : "")</td>
-    <td>@(latestBudgetInfo != null ? latestBudgetInfo.Date.ToString("d", CultureInfo.InvariantCulture) : "")</td>
+    <td>@(earliestBudgetInfo != null ? earliestBudgetInfo.Date.ToShortDateString() : "")</td>
+    <td>@(latestBudgetInfo != null ? latestBudgetInfo.Date.ToShortDateString() : "")</td>
 </tr>
 }
 </table>
