--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/MTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/MTD.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Globalization
-@model DirectAgents.Domain.DTO.TDCampStats
+﻿@model DirectAgents.Domain.DTO.TDCampStats
 @{
     var m = Model; // stats
     var lastMonth = m.Month.AddMonths(-1);
@@ -94,4 +93,4 @@ Month: @m.Month.ToString("MMM yyyy")
 </table>
 
 <br />
-@Html.ActionLink("Previous Month", "MTD", "Stats", new { campId = Model.Campaign.Id, date = lastMonth.ToString("d", CultureInfo.InvariantCulture) }, null)
+@Html.ActionLink("Previous Month", "MTD", "Stats", new { campId = Model.Campaign.Id, date = lastMonth.ToShortDateString() }, null)
