Add a Type column to the Strategy table in the database: rename the old Type column to TargetingType and add a new one.

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Strategies.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Strategies.cshtml
@@ -15,7 +15,7 @@
         <td>@strat.Id</td>
         <td>@strat.Name</td>
         <td>@strat.ExternalId</td>
-        <td>@(strat.Type != null ? strat.Type.Name : "")</td>
+        <td>@(strat.TargetingType != null ? strat.TargetingType.Name : "")</td>
     </tr>
 }
 </table>
