--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/SearchTerms.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/SearchTerms.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<DirectAgents.Domain.Entities.CPProg.SearchTerm>
+﻿@using DirectAgents.Web.Constants
+@model IEnumerable<DirectAgents.Domain.Entities.CPProg.SearchTerm>
 
 <h2>SearchTerms</h2>
 
@@ -6,7 +7,7 @@
     <tr>
         <th>Id</th>
         <th>@Html.ActionLink("Name", "SearchTerms")</th>
-        <th>@Html.ActionLink("Keyword", "SearchTerms", new { sort = "keyw" })</th>
+        <th>@Html.ActionLink("Keyword", "SearchTerms", new { sort = OrderBy.KeywordName })</th>
     </tr>
     @foreach (var term in Model)
     {
