--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/SearchTerms.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/SearchTerms.cshtml
@@ -14,7 +14,7 @@
         <tr>
             <td>@term.Id</td>
             <td>@term.Name</td>
-            <td>@(term.Keyword != null ? term.Keyword.Name + " (" + Html.ActionLink(term.KeywordId.ToString(), "Keywords", new { keywordId = term.KeywordId }) + ")" : "")</td>
+            <td>@Html.ActionLink(term.Keyword != null ? term.Keyword.Name + " (" + term.KeywordId + ")" : " ", "Keywords", new { keywordId = term.KeywordId })</td>
         </tr>
     }
 </table>
