Programmatic DB: Added ordering by the "Disabled" value for ext accounts (in "/ProgAdmin/ExtAccounts" and "/ProgAdmin/ExtAccounts/IndexGauge" pages) + small refactoring

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
@@ -83,7 +83,7 @@
         }
         if (pGauge.Children != null)
         {
-            foreach (var gauge in pGauge.Children.OrderBy(s => s.ExtAccount.Name).ThenBy(s => s.ExtAccount.Id))
+            foreach (var gauge in pGauge.Children)
             {
                 <tr>
                     <td>@gauge.ExtAccount.Platform.Name</td>
