--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/IndexGauge.cshtml
@@ -15,7 +15,7 @@
     <tr>
         <th style="text-align:right">spId</th>
         <th style="text-align:right">Id</th>
-        <th>Name</th>
+        <th colspan="2">Search Account Name (X = disabled)</th>
         <th>Channel</th>
         <th style="text-align:center">DaySums</th>
         <th style="text-align:center">ConvSums</th>
@@ -24,16 +24,17 @@
     </tr>
     @foreach (var sa in Model)
     {
-        <tr>
-            <td style="text-align:right">@sa.SearchProfileId</td>
-            <td style="text-align:right">@sa.SearchAccountId</td>
-            <td>@sa.Name</td>
-            <td>@sa.Channel</td>
-            <td style="text-align:center">@sa.MinDaySum.ToShortDateString() - @sa.MaxDaySum.ToShortDateString()</td>
-            <td style="text-align:center">@sa.MinConvSum.ToShortDateString() - @sa.MaxConvSum.ToShortDateString()</td>
-            <td style="text-align:center">@sa.MinCallSum.ToShortDateString() - @sa.MaxCallSum.ToShortDateString()</td>
-            <td style="text-align:center">@Html.ActionLink("view", "IndexGauge", "SearchCampaigns", new { saId = @sa.SearchAccountId }, null)</td>
-        </tr>
+    <tr>
+        <td style="text-align:right">@sa.SearchProfileId</td>
+        <td style="text-align:right">@sa.SearchAccountId</td>
+        <td>@sa.Name</td>
+        <td>@(string.IsNullOrEmpty(sa.AccountCode) ? "X" : "")</td>
+        <td>@sa.Channel</td>
+        <td style="text-align:center">@sa.MinDaySum.ToShortDateString() - @sa.MaxDaySum.ToShortDateString()</td>
+        <td style="text-align:center">@sa.MinConvSum.ToShortDateString() - @sa.MaxConvSum.ToShortDateString()</td>
+        <td style="text-align:center">@sa.MinCallSum.ToShortDateString() - @sa.MaxCallSum.ToShortDateString()</td>
+        <td style="text-align:center">@Html.ActionLink("view", "IndexGauge", "SearchCampaigns", new { saId = @sa.SearchAccountId }, null)</td>
+    </tr>
     }
 </table>
 @if (oneProfile)
